// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`I18n: renders calendar in all supported locale formats 1`] = `"يونيو ٢٠١٩"`;

exports[`I18n: renders calendar in all supported locale formats 2`] = `"سحنثرخج"`;

exports[`I18n: renders calendar in all supported locale formats 3`] = `
Array [
  "السبت يونيو 1 2019",
  "الأحد يونيو 2 2019",
  "الإثنين يونيو 3 2019",
  "الثلاثاء يونيو 4 2019",
  "الأربعاء يونيو 5 2019",
  "الخميس يونيو 6 2019",
  "الجمعة يونيو 7 2019",
  "السبت يونيو 8 2019",
  "الأحد يونيو 9 2019",
  "الإثنين يونيو 10 2019",
  "الثلاثاء يونيو 11 2019",
  "الأربعاء يونيو 12 2019",
  "الخميس يونيو 13 2019",
  "الجمعة يونيو 14 2019",
  "السبت يونيو 15 2019",
  "الأحد يونيو 16 2019",
  "الإثنين يونيو 17 2019",
  "الثلاثاء يونيو 18 2019",
  "الأربعاء يونيو 19 2019",
  "الخميس يونيو 20 2019",
  "الجمعة يونيو 21 2019",
  "السبت يونيو 22 2019",
  "الأحد يونيو 23 2019",
  "الإثنين يونيو 24 2019",
  "الثلاثاء يونيو 25 2019",
  "الأربعاء يونيو 26 2019",
  "الخميس يونيو 27 2019",
  "الجمعة يونيو 28 2019",
  "السبت يونيو 29 2019",
  "الأحد يونيو 30 2019",
  "الإثنين يوليو 1 2019",
  "الثلاثاء يوليو 2 2019",
  "الأربعاء يوليو 3 2019",
  "الخميس يوليو 4 2019",
  "الجمعة يوليو 5 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 4`] = `"Juni 2019"`;

exports[`I18n: renders calendar in all supported locale formats 5`] = `"MoDiMiDoFrSaSo"`;

exports[`I18n: renders calendar in all supported locale formats 6`] = `
Array [
  "Montag Mai 27 2019",
  "Dienstag Mai 28 2019",
  "Mittwoch Mai 29 2019",
  "Donnerstag Mai 30 2019",
  "Freitag Mai 31 2019",
  "Samstag Juni 1 2019",
  "Sonntag Juni 2 2019",
  "Montag Juni 3 2019",
  "Dienstag Juni 4 2019",
  "Mittwoch Juni 5 2019",
  "Donnerstag Juni 6 2019",
  "Freitag Juni 7 2019",
  "Samstag Juni 8 2019",
  "Sonntag Juni 9 2019",
  "Montag Juni 10 2019",
  "Dienstag Juni 11 2019",
  "Mittwoch Juni 12 2019",
  "Donnerstag Juni 13 2019",
  "Freitag Juni 14 2019",
  "Samstag Juni 15 2019",
  "Sonntag Juni 16 2019",
  "Montag Juni 17 2019",
  "Dienstag Juni 18 2019",
  "Mittwoch Juni 19 2019",
  "Donnerstag Juni 20 2019",
  "Freitag Juni 21 2019",
  "Samstag Juni 22 2019",
  "Sonntag Juni 23 2019",
  "Montag Juni 24 2019",
  "Dienstag Juni 25 2019",
  "Mittwoch Juni 26 2019",
  "Donnerstag Juni 27 2019",
  "Freitag Juni 28 2019",
  "Samstag Juni 29 2019",
  "Sonntag Juni 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 7`] = `"June 2019"`;

exports[`I18n: renders calendar in all supported locale formats 8`] = `"SuMoTuWeThFrSa"`;

exports[`I18n: renders calendar in all supported locale formats 9`] = `
Array [
  "Sunday May 26 2019",
  "Monday May 27 2019",
  "Tuesday May 28 2019",
  "Wednesday May 29 2019",
  "Thursday May 30 2019",
  "Friday May 31 2019",
  "Saturday Jun 1 2019",
  "Sunday Jun 2 2019",
  "Monday Jun 3 2019",
  "Tuesday Jun 4 2019",
  "Wednesday Jun 5 2019",
  "Thursday Jun 6 2019",
  "Friday Jun 7 2019",
  "Saturday Jun 8 2019",
  "Sunday Jun 9 2019",
  "Monday Jun 10 2019",
  "Tuesday Jun 11 2019",
  "Wednesday Jun 12 2019",
  "Thursday Jun 13 2019",
  "Friday Jun 14 2019",
  "Saturday Jun 15 2019",
  "Sunday Jun 16 2019",
  "Monday Jun 17 2019",
  "Tuesday Jun 18 2019",
  "Wednesday Jun 19 2019",
  "Thursday Jun 20 2019",
  "Friday Jun 21 2019",
  "Saturday Jun 22 2019",
  "Sunday Jun 23 2019",
  "Monday Jun 24 2019",
  "Tuesday Jun 25 2019",
  "Wednesday Jun 26 2019",
  "Thursday Jun 27 2019",
  "Friday Jun 28 2019",
  "Saturday Jun 29 2019",
  "Sunday Jun 30 2019",
  "Monday Jul 1 2019",
  "Tuesday Jul 2 2019",
  "Wednesday Jul 3 2019",
  "Thursday Jul 4 2019",
  "Friday Jul 5 2019",
  "Saturday Jul 6 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 10`] = `"junio 2019"`;

exports[`I18n: renders calendar in all supported locale formats 11`] = `"lumamijuvisádo"`;

exports[`I18n: renders calendar in all supported locale formats 12`] = `
Array [
  "lunes may 27 2019",
  "martes may 28 2019",
  "miércoles may 29 2019",
  "jueves may 30 2019",
  "viernes may 31 2019",
  "sábado jun 1 2019",
  "domingo jun 2 2019",
  "lunes jun 3 2019",
  "martes jun 4 2019",
  "miércoles jun 5 2019",
  "jueves jun 6 2019",
  "viernes jun 7 2019",
  "sábado jun 8 2019",
  "domingo jun 9 2019",
  "lunes jun 10 2019",
  "martes jun 11 2019",
  "miércoles jun 12 2019",
  "jueves jun 13 2019",
  "viernes jun 14 2019",
  "sábado jun 15 2019",
  "domingo jun 16 2019",
  "lunes jun 17 2019",
  "martes jun 18 2019",
  "miércoles jun 19 2019",
  "jueves jun 20 2019",
  "viernes jun 21 2019",
  "sábado jun 22 2019",
  "domingo jun 23 2019",
  "lunes jun 24 2019",
  "martes jun 25 2019",
  "miércoles jun 26 2019",
  "jueves jun 27 2019",
  "viernes jun 28 2019",
  "sábado jun 29 2019",
  "domingo jun 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 13`] = `"juin 2019"`;

exports[`I18n: renders calendar in all supported locale formats 14`] = `"lumamejevesadi"`;

exports[`I18n: renders calendar in all supported locale formats 15`] = `
Array [
  "lundi mai 27 2019",
  "mardi mai 28 2019",
  "mercredi mai 29 2019",
  "jeudi mai 30 2019",
  "vendredi mai 31 2019",
  "samedi juin 1 2019",
  "dimanche juin 2 2019",
  "lundi juin 3 2019",
  "mardi juin 4 2019",
  "mercredi juin 5 2019",
  "jeudi juin 6 2019",
  "vendredi juin 7 2019",
  "samedi juin 8 2019",
  "dimanche juin 9 2019",
  "lundi juin 10 2019",
  "mardi juin 11 2019",
  "mercredi juin 12 2019",
  "jeudi juin 13 2019",
  "vendredi juin 14 2019",
  "samedi juin 15 2019",
  "dimanche juin 16 2019",
  "lundi juin 17 2019",
  "mardi juin 18 2019",
  "mercredi juin 19 2019",
  "jeudi juin 20 2019",
  "vendredi juin 21 2019",
  "samedi juin 22 2019",
  "dimanche juin 23 2019",
  "lundi juin 24 2019",
  "mardi juin 25 2019",
  "mercredi juin 26 2019",
  "jeudi juin 27 2019",
  "vendredi juin 28 2019",
  "samedi juin 29 2019",
  "dimanche juin 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 16`] = `"giugno 2019"`;

exports[`I18n: renders calendar in all supported locale formats 17`] = `"lumamegivesado"`;

exports[`I18n: renders calendar in all supported locale formats 18`] = `
Array [
  "lunedì mag 27 2019",
  "martedì mag 28 2019",
  "mercoledì mag 29 2019",
  "giovedì mag 30 2019",
  "venerdì mag 31 2019",
  "sabato giu 1 2019",
  "domenica giu 2 2019",
  "lunedì giu 3 2019",
  "martedì giu 4 2019",
  "mercoledì giu 5 2019",
  "giovedì giu 6 2019",
  "venerdì giu 7 2019",
  "sabato giu 8 2019",
  "domenica giu 9 2019",
  "lunedì giu 10 2019",
  "martedì giu 11 2019",
  "mercoledì giu 12 2019",
  "giovedì giu 13 2019",
  "venerdì giu 14 2019",
  "sabato giu 15 2019",
  "domenica giu 16 2019",
  "lunedì giu 17 2019",
  "martedì giu 18 2019",
  "mercoledì giu 19 2019",
  "giovedì giu 20 2019",
  "venerdì giu 21 2019",
  "sabato giu 22 2019",
  "domenica giu 23 2019",
  "lunedì giu 24 2019",
  "martedì giu 25 2019",
  "mercoledì giu 26 2019",
  "giovedì giu 27 2019",
  "venerdì giu 28 2019",
  "sabato giu 29 2019",
  "domenica giu 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 19`] = `"6月 2019"`;

exports[`I18n: renders calendar in all supported locale formats 20`] = `"日月火水木金土"`;

exports[`I18n: renders calendar in all supported locale formats 21`] = `
Array [
  "日曜日 5月 26 2019",
  "月曜日 5月 27 2019",
  "火曜日 5月 28 2019",
  "水曜日 5月 29 2019",
  "木曜日 5月 30 2019",
  "金曜日 5月 31 2019",
  "土曜日 6月 1 2019",
  "日曜日 6月 2 2019",
  "月曜日 6月 3 2019",
  "火曜日 6月 4 2019",
  "水曜日 6月 5 2019",
  "木曜日 6月 6 2019",
  "金曜日 6月 7 2019",
  "土曜日 6月 8 2019",
  "日曜日 6月 9 2019",
  "月曜日 6月 10 2019",
  "火曜日 6月 11 2019",
  "水曜日 6月 12 2019",
  "木曜日 6月 13 2019",
  "金曜日 6月 14 2019",
  "土曜日 6月 15 2019",
  "日曜日 6月 16 2019",
  "月曜日 6月 17 2019",
  "火曜日 6月 18 2019",
  "水曜日 6月 19 2019",
  "木曜日 6月 20 2019",
  "金曜日 6月 21 2019",
  "土曜日 6月 22 2019",
  "日曜日 6月 23 2019",
  "月曜日 6月 24 2019",
  "火曜日 6月 25 2019",
  "水曜日 6月 26 2019",
  "木曜日 6月 27 2019",
  "金曜日 6月 28 2019",
  "土曜日 6月 29 2019",
  "日曜日 6月 30 2019",
  "月曜日 7月 1 2019",
  "火曜日 7月 2 2019",
  "水曜日 7月 3 2019",
  "木曜日 7月 4 2019",
  "金曜日 7月 5 2019",
  "土曜日 7月 6 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 22`] = `"6월 2019"`;

exports[`I18n: renders calendar in all supported locale formats 23`] = `"일월화수목금토"`;

exports[`I18n: renders calendar in all supported locale formats 24`] = `
Array [
  "일요일 5월 26 2019",
  "월요일 5월 27 2019",
  "화요일 5월 28 2019",
  "수요일 5월 29 2019",
  "목요일 5월 30 2019",
  "금요일 5월 31 2019",
  "토요일 6월 1 2019",
  "일요일 6월 2 2019",
  "월요일 6월 3 2019",
  "화요일 6월 4 2019",
  "수요일 6월 5 2019",
  "목요일 6월 6 2019",
  "금요일 6월 7 2019",
  "토요일 6월 8 2019",
  "일요일 6월 9 2019",
  "월요일 6월 10 2019",
  "화요일 6월 11 2019",
  "수요일 6월 12 2019",
  "목요일 6월 13 2019",
  "금요일 6월 14 2019",
  "토요일 6월 15 2019",
  "일요일 6월 16 2019",
  "월요일 6월 17 2019",
  "화요일 6월 18 2019",
  "수요일 6월 19 2019",
  "목요일 6월 20 2019",
  "금요일 6월 21 2019",
  "토요일 6월 22 2019",
  "일요일 6월 23 2019",
  "월요일 6월 24 2019",
  "화요일 6월 25 2019",
  "수요일 6월 26 2019",
  "목요일 6월 27 2019",
  "금요일 6월 28 2019",
  "토요일 6월 29 2019",
  "일요일 6월 30 2019",
  "월요일 7월 1 2019",
  "화요일 7월 2 2019",
  "수요일 7월 3 2019",
  "목요일 7월 4 2019",
  "금요일 7월 5 2019",
  "토요일 7월 6 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 25`] = `"juni 2019"`;

exports[`I18n: renders calendar in all supported locale formats 26`] = `"madiwodovrzazo"`;

exports[`I18n: renders calendar in all supported locale formats 27`] = `
Array [
  "maandag mei 27 2019",
  "dinsdag mei 28 2019",
  "woensdag mei 29 2019",
  "donderdag mei 30 2019",
  "vrijdag mei 31 2019",
  "zaterdag jun 1 2019",
  "zondag jun 2 2019",
  "maandag jun 3 2019",
  "dinsdag jun 4 2019",
  "woensdag jun 5 2019",
  "donderdag jun 6 2019",
  "vrijdag jun 7 2019",
  "zaterdag jun 8 2019",
  "zondag jun 9 2019",
  "maandag jun 10 2019",
  "dinsdag jun 11 2019",
  "woensdag jun 12 2019",
  "donderdag jun 13 2019",
  "vrijdag jun 14 2019",
  "zaterdag jun 15 2019",
  "zondag jun 16 2019",
  "maandag jun 17 2019",
  "dinsdag jun 18 2019",
  "woensdag jun 19 2019",
  "donderdag jun 20 2019",
  "vrijdag jun 21 2019",
  "zaterdag jun 22 2019",
  "zondag jun 23 2019",
  "maandag jun 24 2019",
  "dinsdag jun 25 2019",
  "woensdag jun 26 2019",
  "donderdag jun 27 2019",
  "vrijdag jun 28 2019",
  "zaterdag jun 29 2019",
  "zondag jun 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 28`] = `"czerwiec 2019"`;

exports[`I18n: renders calendar in all supported locale formats 29`] = `"PnWtŚrCzPtSoNd"`;

exports[`I18n: renders calendar in all supported locale formats 30`] = `
Array [
  "poniedziałek maj 27 2019",
  "wtorek maj 28 2019",
  "środa maj 29 2019",
  "czwartek maj 30 2019",
  "piątek maj 31 2019",
  "sobota cze 1 2019",
  "niedziela cze 2 2019",
  "poniedziałek cze 3 2019",
  "wtorek cze 4 2019",
  "środa cze 5 2019",
  "czwartek cze 6 2019",
  "piątek cze 7 2019",
  "sobota cze 8 2019",
  "niedziela cze 9 2019",
  "poniedziałek cze 10 2019",
  "wtorek cze 11 2019",
  "środa cze 12 2019",
  "czwartek cze 13 2019",
  "piątek cze 14 2019",
  "sobota cze 15 2019",
  "niedziela cze 16 2019",
  "poniedziałek cze 17 2019",
  "wtorek cze 18 2019",
  "środa cze 19 2019",
  "czwartek cze 20 2019",
  "piątek cze 21 2019",
  "sobota cze 22 2019",
  "niedziela cze 23 2019",
  "poniedziałek cze 24 2019",
  "wtorek cze 25 2019",
  "środa cze 26 2019",
  "czwartek cze 27 2019",
  "piątek cze 28 2019",
  "sobota cze 29 2019",
  "niedziela cze 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 31`] = `"junho 2019"`;

exports[`I18n: renders calendar in all supported locale formats 32`] = `"2ª3ª4ª5ª6ªSáDo"`;

exports[`I18n: renders calendar in all supported locale formats 33`] = `
Array [
  "Segunda-feira mai 27 2019",
  "Terça-feira mai 28 2019",
  "Quarta-feira mai 29 2019",
  "Quinta-feira mai 30 2019",
  "Sexta-feira mai 31 2019",
  "Sábado jun 1 2019",
  "Domingo jun 2 2019",
  "Segunda-feira jun 3 2019",
  "Terça-feira jun 4 2019",
  "Quarta-feira jun 5 2019",
  "Quinta-feira jun 6 2019",
  "Sexta-feira jun 7 2019",
  "Sábado jun 8 2019",
  "Domingo jun 9 2019",
  "Segunda-feira jun 10 2019",
  "Terça-feira jun 11 2019",
  "Quarta-feira jun 12 2019",
  "Quinta-feira jun 13 2019",
  "Sexta-feira jun 14 2019",
  "Sábado jun 15 2019",
  "Domingo jun 16 2019",
  "Segunda-feira jun 17 2019",
  "Terça-feira jun 18 2019",
  "Quarta-feira jun 19 2019",
  "Quinta-feira jun 20 2019",
  "Sexta-feira jun 21 2019",
  "Sábado jun 22 2019",
  "Domingo jun 23 2019",
  "Segunda-feira jun 24 2019",
  "Terça-feira jun 25 2019",
  "Quarta-feira jun 26 2019",
  "Quinta-feira jun 27 2019",
  "Sexta-feira jun 28 2019",
  "Sábado jun 29 2019",
  "Domingo jun 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 34`] = `"junho 2019"`;

exports[`I18n: renders calendar in all supported locale formats 35`] = `"do2ª3ª4ª5ª6ªsá"`;

exports[`I18n: renders calendar in all supported locale formats 36`] = `
Array [
  "domingo mai 26 2019",
  "segunda-feira mai 27 2019",
  "terça-feira mai 28 2019",
  "quarta-feira mai 29 2019",
  "quinta-feira mai 30 2019",
  "sexta-feira mai 31 2019",
  "sábado jun 1 2019",
  "domingo jun 2 2019",
  "segunda-feira jun 3 2019",
  "terça-feira jun 4 2019",
  "quarta-feira jun 5 2019",
  "quinta-feira jun 6 2019",
  "sexta-feira jun 7 2019",
  "sábado jun 8 2019",
  "domingo jun 9 2019",
  "segunda-feira jun 10 2019",
  "terça-feira jun 11 2019",
  "quarta-feira jun 12 2019",
  "quinta-feira jun 13 2019",
  "sexta-feira jun 14 2019",
  "sábado jun 15 2019",
  "domingo jun 16 2019",
  "segunda-feira jun 17 2019",
  "terça-feira jun 18 2019",
  "quarta-feira jun 19 2019",
  "quinta-feira jun 20 2019",
  "sexta-feira jun 21 2019",
  "sábado jun 22 2019",
  "domingo jun 23 2019",
  "segunda-feira jun 24 2019",
  "terça-feira jun 25 2019",
  "quarta-feira jun 26 2019",
  "quinta-feira jun 27 2019",
  "sexta-feira jun 28 2019",
  "sábado jun 29 2019",
  "domingo jun 30 2019",
  "segunda-feira jul 1 2019",
  "terça-feira jul 2 2019",
  "quarta-feira jul 3 2019",
  "quinta-feira jul 4 2019",
  "sexta-feira jul 5 2019",
  "sábado jul 6 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 37`] = `"июнь 2019"`;

exports[`I18n: renders calendar in all supported locale formats 38`] = `"пнвтсрчтптсбвс"`;

exports[`I18n: renders calendar in all supported locale formats 39`] = `
Array [
  "понедельник май 27 2019",
  "вторник май 28 2019",
  "среда май 29 2019",
  "четверг май 30 2019",
  "пятница май 31 2019",
  "суббота июнь 1 2019",
  "воскресенье июнь 2 2019",
  "понедельник июнь 3 2019",
  "вторник июнь 4 2019",
  "среда июнь 5 2019",
  "четверг июнь 6 2019",
  "пятница июнь 7 2019",
  "суббота июнь 8 2019",
  "воскресенье июнь 9 2019",
  "понедельник июнь 10 2019",
  "вторник июнь 11 2019",
  "среда июнь 12 2019",
  "четверг июнь 13 2019",
  "пятница июнь 14 2019",
  "суббота июнь 15 2019",
  "воскресенье июнь 16 2019",
  "понедельник июнь 17 2019",
  "вторник июнь 18 2019",
  "среда июнь 19 2019",
  "четверг июнь 20 2019",
  "пятница июнь 21 2019",
  "суббота июнь 22 2019",
  "воскресенье июнь 23 2019",
  "понедельник июнь 24 2019",
  "вторник июнь 25 2019",
  "среда июнь 26 2019",
  "четверг июнь 27 2019",
  "пятница июнь 28 2019",
  "суббота июнь 29 2019",
  "воскресенье июнь 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 40`] = `"juni 2019"`;

exports[`I18n: renders calendar in all supported locale formats 41`] = `"måtiontofrlösö"`;

exports[`I18n: renders calendar in all supported locale formats 42`] = `
Array [
  "måndag maj 27 2019",
  "tisdag maj 28 2019",
  "onsdag maj 29 2019",
  "torsdag maj 30 2019",
  "fredag maj 31 2019",
  "lördag jun 1 2019",
  "söndag jun 2 2019",
  "måndag jun 3 2019",
  "tisdag jun 4 2019",
  "onsdag jun 5 2019",
  "torsdag jun 6 2019",
  "fredag jun 7 2019",
  "lördag jun 8 2019",
  "söndag jun 9 2019",
  "måndag jun 10 2019",
  "tisdag jun 11 2019",
  "onsdag jun 12 2019",
  "torsdag jun 13 2019",
  "fredag jun 14 2019",
  "lördag jun 15 2019",
  "söndag jun 16 2019",
  "måndag jun 17 2019",
  "tisdag jun 18 2019",
  "onsdag jun 19 2019",
  "torsdag jun 20 2019",
  "fredag jun 21 2019",
  "lördag jun 22 2019",
  "söndag jun 23 2019",
  "måndag jun 24 2019",
  "tisdag jun 25 2019",
  "onsdag jun 26 2019",
  "torsdag jun 27 2019",
  "fredag jun 28 2019",
  "lördag jun 29 2019",
  "söndag jun 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 43`] = `"Haziran 2019"`;

exports[`I18n: renders calendar in all supported locale formats 44`] = `"PtSaÇaPeCuCtPz"`;

exports[`I18n: renders calendar in all supported locale formats 45`] = `
Array [
  "Pazartesi May 27 2019",
  "Salı May 28 2019",
  "Çarşamba May 29 2019",
  "Perşembe May 30 2019",
  "Cuma May 31 2019",
  "Cumartesi Haz 1 2019",
  "Pazar Haz 2 2019",
  "Pazartesi Haz 3 2019",
  "Salı Haz 4 2019",
  "Çarşamba Haz 5 2019",
  "Perşembe Haz 6 2019",
  "Cuma Haz 7 2019",
  "Cumartesi Haz 8 2019",
  "Pazar Haz 9 2019",
  "Pazartesi Haz 10 2019",
  "Salı Haz 11 2019",
  "Çarşamba Haz 12 2019",
  "Perşembe Haz 13 2019",
  "Cuma Haz 14 2019",
  "Cumartesi Haz 15 2019",
  "Pazar Haz 16 2019",
  "Pazartesi Haz 17 2019",
  "Salı Haz 18 2019",
  "Çarşamba Haz 19 2019",
  "Perşembe Haz 20 2019",
  "Cuma Haz 21 2019",
  "Cumartesi Haz 22 2019",
  "Pazar Haz 23 2019",
  "Pazartesi Haz 24 2019",
  "Salı Haz 25 2019",
  "Çarşamba Haz 26 2019",
  "Perşembe Haz 27 2019",
  "Cuma Haz 28 2019",
  "Cumartesi Haz 29 2019",
  "Pazar Haz 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 46`] = `"六月 2019"`;

exports[`I18n: renders calendar in all supported locale formats 47`] = `"一二三四五六日"`;

exports[`I18n: renders calendar in all supported locale formats 48`] = `
Array [
  "星期一 5月 27 2019",
  "星期二 5月 28 2019",
  "星期三 5月 29 2019",
  "星期四 5月 30 2019",
  "星期五 5月 31 2019",
  "星期六 6月 1 2019",
  "星期日 6月 2 2019",
  "星期一 6月 3 2019",
  "星期二 6月 4 2019",
  "星期三 6月 5 2019",
  "星期四 6月 6 2019",
  "星期五 6月 7 2019",
  "星期六 6月 8 2019",
  "星期日 6月 9 2019",
  "星期一 6月 10 2019",
  "星期二 6月 11 2019",
  "星期三 6月 12 2019",
  "星期四 6月 13 2019",
  "星期五 6月 14 2019",
  "星期六 6月 15 2019",
  "星期日 6月 16 2019",
  "星期一 6月 17 2019",
  "星期二 6月 18 2019",
  "星期三 6月 19 2019",
  "星期四 6月 20 2019",
  "星期五 6月 21 2019",
  "星期六 6月 22 2019",
  "星期日 6月 23 2019",
  "星期一 6月 24 2019",
  "星期二 6月 25 2019",
  "星期三 6月 26 2019",
  "星期四 6月 27 2019",
  "星期五 6月 28 2019",
  "星期六 6月 29 2019",
  "星期日 6月 30 2019",
]
`;

exports[`I18n: renders calendar in all supported locale formats 49`] = `"六月 2019"`;

exports[`I18n: renders calendar in all supported locale formats 50`] = `"日一二三四五六"`;

exports[`I18n: renders calendar in all supported locale formats 51`] = `
Array [
  "星期日 5月 26 2019",
  "星期一 5月 27 2019",
  "星期二 5月 28 2019",
  "星期三 5月 29 2019",
  "星期四 5月 30 2019",
  "星期五 5月 31 2019",
  "星期六 6月 1 2019",
  "星期日 6月 2 2019",
  "星期一 6月 3 2019",
  "星期二 6月 4 2019",
  "星期三 6月 5 2019",
  "星期四 6月 6 2019",
  "星期五 6月 7 2019",
  "星期六 6月 8 2019",
  "星期日 6月 9 2019",
  "星期一 6月 10 2019",
  "星期二 6月 11 2019",
  "星期三 6月 12 2019",
  "星期四 6月 13 2019",
  "星期五 6月 14 2019",
  "星期六 6月 15 2019",
  "星期日 6月 16 2019",
  "星期一 6月 17 2019",
  "星期二 6月 18 2019",
  "星期三 6月 19 2019",
  "星期四 6月 20 2019",
  "星期五 6月 21 2019",
  "星期六 6月 22 2019",
  "星期日 6月 23 2019",
  "星期一 6月 24 2019",
  "星期二 6月 25 2019",
  "星期三 6月 26 2019",
  "星期四 6月 27 2019",
  "星期五 6月 28 2019",
  "星期六 6月 29 2019",
  "星期日 6月 30 2019",
  "星期一 7月 1 2019",
  "星期二 7月 2 2019",
  "星期三 7月 3 2019",
  "星期四 7月 4 2019",
  "星期五 7月 5 2019",
  "星期六 7月 6 2019",
]
`;
